<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rrt</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="swagata@todo.todo">swagata</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>opencv</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>opencv</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
